from fox to rabbit

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset = "utf-8" />
 
-        <title>Cross-Fox</title>
+        <title>Rabbit</title>
 
         <link id="dark-scheme-icon" rel="icon" href="./fox-50-dark.png" type="image/png" media="prefers-color-scheme: dark">
         <link id="light-scheme-icon" rel="icon" href="./fox-50-light.png" type="image/png" media="prefers-color-scheme: light">
@@ -81,7 +81,7 @@
     </head>
     <body>
         <header>
-            <h1>Hello, Fox!</h1>
+            <h1>Hello, Rabbit!</h1>
             <img src="./fox-logo.gif" alt="fox icon">
         </header>
         <div class="refresh">
