changed demo text to new species

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -82,7 +82,7 @@
     <body>
         <header>
             <h1>Hello, Rabbit!</h1>
-            <img src="./fox-logo.gif" alt="fox icon">
+            <img src="../../icons/png/Rabbit%20icon%20white.png" alt="rabbit icon">
         </header>
         <div class="refresh">
             <h2>Request counter: %i</h2>
