--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -64,8 +64,7 @@
             }
             button {
                 margin: 10px; 
-                padding: 30px; 
-                background-color: #613e2b;
+                padding: 30px;
                 color: #f8f4f2; 
                 border: 2px solid black; 
                 border-radius: 5px; 
@@ -106,7 +105,7 @@
         <div style="background-color: rgba(0, 0, 0, 0.26);height: 100vh;width: 100%;position: relative;">
             <header>
                 <h1>Hello, <span style="margin-right: 15px;">Rabbit</span></h1>
-                <img src="./Rabbit%20icon%20white.png" alt="rabbit icon">
+                <img src="Rabbit%20icon%20white.png" alt="rabbit icon">
             </header>
     
             <footer>
