--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -13,7 +13,6 @@
 
         <style>
             body{
-                background-image: url("background.png");
                 margin: 0;
                 padding: 0;
                 overflow: hidden;
@@ -48,7 +47,6 @@
                 margin-left: 5px;
             }
             body {
-                background-color: #c4743d;
                 text-align: center;
                 margin-bottom: 50px;
                 font-family: 'Inconsolata', monospace;
@@ -62,23 +60,6 @@
             p {
                 color: #f8f4f2;
             }
-            button {
-                margin: 10px; 
-                padding: 30px;
-                color: #f8f4f2; 
-                border: 2px solid black; 
-                border-radius: 5px; 
-                font-size: 20px;
-            }
-            button:hover{
-                margin: 10px; 
-                padding: 30px; 
-                background-color: #613e2b;
-                color: #f8f4f2; 
-                border: 2px solid white; 
-                border-radius: 5px; 
-                font-size: 20px;
-            }       
             footer {
                 position: absolute;
                 height: 150px;
@@ -101,7 +82,7 @@
         </style>
 
     </head>
-    <body>
+    <body style="background-image: url('background.png')">
         <div style="background-color: rgba(0, 0, 0, 0.26);height: 100vh;width: 100%;position: relative;">
             <header>
                 <h1>Hello, <span style="margin-right: 15px;">Rabbit</span></h1>
