fixed title icon

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -4,9 +4,9 @@
 
         <title>Rabbit</title>
 
-        <link id="dark-scheme-icon" rel="icon" href="./fox-50-dark.png" type="image/png" media="prefers-color-scheme: dark">
-        <link id="light-scheme-icon" rel="icon" href="./fox-50-light.png" type="image/png" media="prefers-color-scheme: light">
-        <link id="light-scheme-icon" rel="icon" href="./fox-50-light.png" type="image/png" media="prefers-color-scheme: no-preference">
+        <link id="dark-scheme-icon" rel="icon" href="Rabbit%20icon%20white.png" type="image/png" media="prefers-color-scheme: dark">
+        <link id="light-scheme-icon" rel="icon" href="Rabbit%20icon%20white.png" type="image/png" media="prefers-color-scheme: light">
+        <link id="light-scheme-icon" rel="icon" href="Rabbit%20icon%20white.png" type="image/png" media="prefers-color-scheme: no-preference">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
